layout bugado

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,91 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
+  background-color: lightsalmon;
+}
+
+div#interface {
+  width: 1200px;
+  height: 600px;
+  background-color: cadetblue;
+  display: flex;
+}
+
+div#chat {
+  width: 250px;
+  max-height: 600px;
+  background-color: coral;
+  font: 13px Helvetica, Arial;
+}
+
+div#game {
+  width: 600px;
+  max-height: 600px;
+  background-color: greenyellow;
+}
+
+canvas#screen {
+  margin-top: 100px;
+  background-color: deepskyblue;
+}
+
+div#menu {
+  width: 200px;
+  max-height: 600px;
+  background-color: hotpink;
+}
+
+div#log {
+  width: 150px;
+  max-height: 600px;
+  background-color: magenta;
+}
+
+form {
+  background: #000;
+  padding: 3px;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+}
+form input {
+  border: none;
+  padding: 10px;
+  flex-grow: 1;
+  width: 80%;
+  height: 10%;
+  margin-right: 0.5%;
+}
+form button {
+  width: 19%;
+  background: rgb(130, 224, 255);
+  border: none;
+  padding: 10px;
+}
+
+#messages {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 93.5%;
+  background-color: aliceblue;
+}
+#messages > li {
+  padding: 0.5rem 1rem;
+  background: rgb(172, 172, 172);
+}
+#messages > li:nth-child(odd) {
+  background: #efefef;
+}
+
+/* ######################################################################### */
+
+/* body {
   margin: 0;
   padding-bottom: 3rem;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
@@ -47,4 +134,4 @@ body {
 }
 #messages > li:nth-child(odd) {
   background: #efefef;
-}
+} */
